--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.7",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "postcss-loader": "^2.0.6",
@@ -41,8 +46,6 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0",
-    "whatwg-fetch": "^2.0.3",
-	"bootstrap": "^3.3.7",
-	 "font-awesome": "^4.7.0"
+    "whatwg-fetch": "^2.0.3"
   }
 }
