--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cryptr": "^2.0.0",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
