--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "sass-loader": "^6.0.6",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
