--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
