changes in  routing

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack -p --progress --profile --colors && node server",
-    "start:dev": "node server"
+    "start:dev": "webpack -p --progress --profile --colors && node server",
+    "start": "node server"
   },
   "dependencies": {
     "autoprefixer": "^7.1.2",
