Image upload functionality

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ $RECYCLE.BIN/
 .Spotlight-V100
 .Trashes
 /nbproject/private/
+config/config.js
+config/config.js
+config/config.js
+config/config.js
