--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cors": "^2.8.4",
+ 
     "cryptr": "^2.0.0",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
+    "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
@@ -34,6 +37,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
+  
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "postcss-loader": "^2.0.6",
