--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.4",
- 
     "cryptr": "^2.0.0",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
@@ -37,7 +36,6 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
-  
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "postcss-loader": "^2.0.6",
@@ -55,6 +53,7 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "whatwg-fetch-ie8": "^1.0.0"
   }
 }
