--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
-    "bootstrap": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.4",
@@ -30,7 +29,6 @@
     "express": "^4.15.4",
     "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
@@ -42,7 +40,6 @@
     "pubsub-js": "^1.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "sass-loader": "^6.0.6",
@@ -52,8 +49,6 @@
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0",
-    "whatwg-fetch": "^2.0.3",
-    "whatwg-fetch-ie8": "^1.0.0"
+    "webpack-merge": "^4.1.0"
   }
 }
