--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.4",
     "cryptr": "^2.0.0",
+    "css-loader": "^0.28.5",
     "express": "^4.15.4",
     "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.5",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
@@ -42,6 +44,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.2.2",
+    "sanitize-html": "^1.18.2",
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
