--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "cryptr": "^2.0.0",
     "css-loader": "^0.28.5",
+    "es6-promise": "^4.2.4",
     "express": "^4.15.4",
     "express-fileupload": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
