--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "lodash": "^4.17.5",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
+    "node-sass": "^4.9.4",
+    "nodemon": "^1.18.4",
     "postcss-loader": "^2.0.6",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-ckeditor-component": "^1.0.7",
     "react-dom": "^16.2.0",
+    "react-masonry-component": "^6.2.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.2.2",
     "sanitize-html": "^1.18.2",
