--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "My-stuff",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "author": "Anurag gautam",
   "repository": {
@@ -13,6 +13,9 @@
     "start:dev": "webpack -p --progress --profile --colors && node server",
     "start": "node server"
   },
+  "engines": {
+    "node": "10.3.0"
+  },
   "dependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.0",
@@ -22,22 +25,17 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.4",
     "cryptr": "^2.0.0",
     "css-loader": "^0.28.5",
     "es6-promise": "^4.2.4",
     "express": "^4.15.4",
-    "express-fileupload": "^0.4.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.5",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.4",
-    "nodemon": "^1.18.4",
     "postcss-loader": "^2.0.6",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
@@ -50,16 +48,20 @@
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.18.2"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.0.1",
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "compression-webpack-plugin": "^1.1.7",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.6.0"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "compression-webpack-plugin": "^1.1.7",
-    "webpack-bundle-analyzer": "^2.10.0"
+    "webpack-node-externals": "^1.6.0",
+    "nodemon": "^1.18.4"
   }
 }
