--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "connect-history-api-fallback": "^1.3.0",
     "cors": "^2.8.4",
