--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.4",
+    "nodemon": "^1.18.4",
     "postcss-loader": "^2.0.6",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
